# reth

./: .dockerignore  .gitignore  Cargo.toml
crates/blockchain-tree/src/: blockchain_tree.rs  shareable.rs
crates/consensus/auto-seal/src/: lib.rs  task.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/evm/src/: execute.rs
crates/ethereum/node/src/: node.rs
crates/primitives/src/: block.rs
crates/primitives/src/constants/: mod.rs
crates/primitives/src/transaction/: mod.rs
crates/scalar/pevm/: Cargo.toml
crates/scalar/pevm/src/: config.rs  lib.rs
crates/scalar/seth/: Cargo.toml
crates/scalar/seth/src/: builder.rs  config.rs  main.rs
crates/trie-parallel/src/: async_root.rs  parallel_root.rs
crates/trie/src/: trie.rs
etc/: .env.local  .gitignore  kurtosis_params.yaml  reth.yml  run.sh
etc/blockscout/: docker-compose.yml  run.sh
etc/blockscout/services/: backend.yml  db.yml  frontend.yml  nginx.yml  redis.yml  smart-contract-verifier.yml  stats.yml  user-ops-indexer.yml  visualizer.yml
scalar/: Cargo.toml
scalar/docker/: Dockerfile  docker-compose.yml
scalar/pevm/: Cargo.toml
scalar/pevm/src/: config.rs  lib.rs  storage.rs
scalar/reth-node/: Cargo.toml
scalar/reth-test-cluster/: Cargo.toml
scalar/reth-test-cluster/src/: cluster.rs  config.rs  lib.rs  reth_cluster.rs  wallet_client.rs
scalar/seth/: Cargo.toml
scalar/seth/src/: main.rs
scalar/src/: lib.rs
scalar/src/consensus/: args.rs  mod.rs  narwhal.rs
scripts/: Dockerfile  chain.json  docker-compose.yml  genesis.json  run_docker.sh  run_node.sh
(+44 files in other folders)
